--- a/neo4jv3/pom.xml
+++ b/neo4jv3/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
         <artifactId>parent</artifactId>
-        <version>1.10.0</version>
+        <version>1.11.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>neo4jv3</artifactId>
