--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
         <artifactId>parent</artifactId>
-        <version>1.11.0-SNAPSHOT</version>
+        <version>1.11.0-RC-1</version>
     </parent>
 
     <artifactId>bootstrap</artifactId>
