--- a/bootstrap/pom.xml
+++ b/bootstrap/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>xo.api</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.buschmais.xo</groupId>
+            <artifactId>xo.neo4j.embedded</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${org.neo4j_3x.version}</version>
