--- a/neo4jv3/pom.xml
+++ b/neo4jv3/pom.xml
@@ -23,6 +23,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.buschmais.xo</groupId>
+            <artifactId>xo.neo4j.embedded</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${org.neo4j_3x.version}</version>
