[jQAssistant/jqa-bom#1] Introduction of a BOM for shared dependencies
Dependencies, mainly intended for plugin development, shared by
multiple components of jQAssistant, have been managed until
now independently by many components. The goal of the introduction
of a Bill of Materials is to have a central place to define
the default scope and version of all these dependencies in a
central place.

--- a/neo4jv3/pom.xml
+++ b/neo4jv3/pom.xml
@@ -50,10 +50,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>jcl-over-slf4j</artifactId>
-        </dependency>
         <!-- for determining mime types -->
         <dependency>
             <groupId>org.apache.tika</groupId>
@@ -65,9 +61,19 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+            <scope>compile</scope>
         </dependency>
         <!-- Test -->
         <dependency>
@@ -97,6 +103,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
