fixed dependency inconsistency for Neo4j

--- a/neo4jv3/pom.xml
+++ b/neo4jv3/pom.xml
@@ -25,10 +25,21 @@
         <dependency>
             <groupId>com.buschmais.xo</groupId>
             <artifactId>xo.neo4j.embedded</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.neo4j.community</groupId>
+                    <artifactId>it-test-support</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
+            <version>${org.neo4j_3x.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j.community</groupId>
+            <artifactId>it-test-support</artifactId>
             <version>${org.neo4j_3x.version}</version>
         </dependency>
         <dependency>
