Changes to be able to build as Java 11 project
Changes to the project to be able to run it as Java 11 application.

--- a/neo4jv3/pom.xml
+++ b/neo4jv3/pom.xml
@@ -59,6 +59,19 @@
                     <artifactId>commons-logging</artifactId>
                     <groupId>commons-logging</groupId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>org.glassfish.jaxb</artifactId>
+                    <groupId>jaxb-runtime</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.glassfish.jaxb</groupId>
+                    <artifactId>jaxb-runtime</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                    <groupId>jakarta.xml.bind</groupId>
+                </exclusion>
+
             </exclusions>
         </dependency>
         <!-- for determining mime types -->
