--- a/pom.xml
+++ b/pom.xml
@@ -8,26 +8,26 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
-    <artifactId>parent</artifactId>
+    <groupId>com.buschmais.jqassistant.neo4j</groupId>
+    <artifactId>embedded</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
     <name>jQAssistant Embedded Neo4j</name>
     <url>http://jqassistant.org/</url>
 
     <description>
-        Provides the integration of an embedded Neo4j server.
+        Provides the integration of an embedded Neo4j database and server.
     </description>
 
     <properties>
+        <org.neo4j.version>4.4.15</org.neo4j.version>
+        <org.neo4j.browser.version>5.0.0</org.neo4j.browser.version>
         <checkstyle.version>8.29</checkstyle.version>
         <jqa-asciidoctor-utilities.version>2.0.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
         <jqa-bom.version>2.0.0-SNAPSHOT</jqa-bom.version>
         <jqa-own-constraints.version>2.0.0-SNAPSHOT</jqa-own-constraints.version>
         <org.mockito.version>2.24.0</org.mockito.version>
         <org.hamcrest.version>2.0.0.0</org.hamcrest.version>
-        <org.neo4j.browser.version>4.4.7</org.neo4j.browser.version>
     </properties>
 
     <organization>
@@ -190,6 +190,11 @@
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
+            <version>${org.neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j.community</groupId>
+            <artifactId>it-test-support</artifactId>
             <version>${org.neo4j.version}</version>
         </dependency>
         <dependency>
