--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>2.0.0-SNAPSHOT</version>
 
     <name>jQAssistant Embedded Neo4j</name>
-    <url>http://jqassistant.org/</url>
+    <url>https://jqassistant.org/</url>
 
     <description>
         Provides the integration of an embedded Neo4j database and server.
