Feature/java11 neo4jv4 (#8)
Migrate to Neo4j 4.x

* prepared migration to Neo4j 4.x

* renamed embedded Neo4j Maven module to "com.buschmais.jqassistant.neo4j:embedded"

--- a/pom.xml
+++ b/pom.xml
@@ -8,19 +8,20 @@
         <relativePath/>
     </parent>
 
-    <groupId>com.buschmais.jqassistant.neo4jserver</groupId>
-    <artifactId>parent</artifactId>
+    <groupId>com.buschmais.jqassistant.neo4j</groupId>
+    <artifactId>embedded</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
 
-    <name>jQAssistant Embedded Neo4j Server Parent</name>
+    <name>jQAssistant Embedded Neo4j</name>
     <url>https://jqassistant.org/</url>
 
     <description>
-        Provides integrations jQAssistant and Neo4j server.
+        Provides the integration of an embedded Neo4j database and server.
     </description>
 
     <properties>
+        <org.neo4j.version>4.4.15</org.neo4j.version>
+        <org.neo4j.browser.version>5.0.0</org.neo4j.browser.version>
         <checkstyle.version>8.29</checkstyle.version>
         <jqa-asciidoctor-utilities.version>2.0.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
         <jqa-bom.version>2.0.0-SNAPSHOT</jqa-bom.version>
@@ -154,11 +155,6 @@
         </repository>
     </repositories>
 
-    <modules>
-        <module>bootstrap</module>
-        <module>neo4jv3</module>
-    </modules>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -182,5 +178,75 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>${org.neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j.community</groupId>
+            <artifactId>it-test-support</artifactId>
+            <version>${org.neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j.client</groupId>
+            <artifactId>neo4j-browser</artifactId>
+            <version>${org.neo4j.browser.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.buschmais.xo</groupId>
+            <artifactId>xo.neo4j.embedded</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.neo4j</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.smallrye.config</groupId>
+            <artifactId>smallrye-config-core</artifactId>
+        </dependency>
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+        <!-- Test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>java-hamcrest</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
