--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     </description>
 
     <properties>
-        <org.neo4j.version>4.4.15</org.neo4j.version>
+        <org.neo4j.version>4.4.16</org.neo4j.version>
         <org.neo4j.browser.version>5.0.0</org.neo4j.browser.version>
         <checkstyle.version>8.29</checkstyle.version>
         <jqa-asciidoctor-utilities.version>2.0.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
@@ -184,6 +184,12 @@
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j</artifactId>
             <version>${org.neo4j.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-nop</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.neo4j.community</groupId>
