- excluded unwanted 3rd-party dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,10 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-nop</artifactId>
                 </exclusion>
+                <exclusion>
+                    <artifactId>commons-logging</artifactId>
+                    <groupId>commons-logging</groupId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -203,6 +207,18 @@
                 <exclusion>
                     <groupId>org.hamcrest</groupId>
                     <artifactId>*</artifactId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>mockito-core</artifactId>
+                    <groupId>org.mockito</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>assertj-core</artifactId>
+                    <groupId>org.assertj</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>awaitility</artifactId>
+                    <groupId>org.awaitility</groupId>
                 </exclusion>
             </exclusions>
         </dependency>
