--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>2.0.0-RC2</version>
+        <version>2.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant.neo4j</groupId>
     <artifactId>embedded</artifactId>
-    <version>2.0.0-RC2</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>jQAssistant Embedded Neo4j</name>
     <url>https://jqassistant.org/</url>
