--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,9 @@
         <org.neo4j.version>4.4.19</org.neo4j.version>
         <org.neo4j.browser.version>5.0.0</org.neo4j.browser.version>
         <checkstyle.version>8.29</checkstyle.version>
-        <jqa-asciidoctor-utilities.version>2.0.0-RC2</jqa-asciidoctor-utilities.version>
-        <jqa-bom.version>2.0.0-RC2</jqa-bom.version>
-        <jqa-own-constraints.version>2.0.0-RC2</jqa-own-constraints.version>
+        <jqa-asciidoctor-utilities.version>2.0.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
+        <jqa-bom.version>2.0.0-SNAPSHOT</jqa-bom.version>
+        <jqa-own-constraints.version>2.0.0-SNAPSHOT</jqa-own-constraints.version>
         <org.mockito.version>2.24.0</org.mockito.version>
         <org.hamcrest.version>2.0.0.0</org.hamcrest.version>
     </properties>
