--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>2.0.0</version>
+        <version>2.1.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant.neo4j</groupId>
     <artifactId>embedded</artifactId>
-    <version>2.0.0</version>
+    <version>2.1.0-SNAPSHOT</version>
 
     <name>jQAssistant Embedded Neo4j</name>
     <url>https://jqassistant.org/</url>
@@ -23,9 +23,9 @@
         <org.neo4j.version>4.4.19</org.neo4j.version>
         <org.neo4j.browser.version>5.6.0</org.neo4j.browser.version>
         <checkstyle.version>8.29</checkstyle.version>
-        <jqa-asciidoctor-utilities.version>2.0.0</jqa-asciidoctor-utilities.version>
-        <jqa-bom.version>2.0.0</jqa-bom.version>
-        <jqa-own-constraints.version>2.0.0</jqa-own-constraints.version>
+        <jqa-asciidoctor-utilities.version>2.1.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
+        <jqa-bom.version>2.1.0-SNAPSHOT</jqa-bom.version>
+        <jqa-own-constraints.version>2.1.0-SNAPSHOT</jqa-own-constraints.version>
         <org.mockito.version>2.24.0</org.mockito.version>
         <org.hamcrest.version>2.0.0.0</org.hamcrest.version>
     </properties>
