--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.buschmais.jqassistant</groupId>
         <artifactId>jqa-uber-parent</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.0.3</version>
         <relativePath/>
     </parent>
 
     <groupId>com.buschmais.jqassistant.neo4j</groupId>
     <artifactId>embedded</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.0.3</version>
 
     <name>jQAssistant Embedded Neo4j</name>
     <url>https://jqassistant.org/</url>
@@ -21,9 +21,9 @@
 
     <properties>
         <checkstyle.version>8.29</checkstyle.version>
-        <jqa-asciidoctor-utilities.version>2.1.0-SNAPSHOT</jqa-asciidoctor-utilities.version>
-        <jqa-bom.version>2.1.0-SNAPSHOT</jqa-bom.version>
-        <jqa-own-constraints.version>2.1.0-SNAPSHOT</jqa-own-constraints.version>
+        <jqa-asciidoctor-utilities.version>2.0.3</jqa-asciidoctor-utilities.version>
+        <jqa-bom.version>2.0.3</jqa-bom.version>
+        <jqa-own-constraints.version>2.0.3</jqa-own-constraints.version>
     </properties>
 
     <organization>
